fixed right spacing on home page when width is small (mobile)

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -738,6 +738,7 @@ section.intro nav {
   bottom: 0.625em;
   width: 100%;
   text-align: center;
+  left: 0;
 }
 section.intro nav a {
   color: white;
